deployment/kubernetets/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: acc
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: https  
  selector:
    app: acc
