deployment/kubernetets/postgis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgis-service
  labels:
    app: postgis
spec:
  ports:
  - port: 5432
    name: postgres  
  selector:
    app: postgis
