deployment/kubernetets/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acc-ingress
  namespace: iothub
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"    
spec:
  tls:
  - hosts:
    - www.stenlund.eu
    secretName: stenlund-www-secret
  rules:
  - host: www.stenlund.eu
    http:
      paths:
      - path: /iothub
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
